data/derived/sp14/progs/unify/prog1987.ml.out
Characters 55-57:
  wwhile(fx,b);;
         ^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
